--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "sobolan/rest-negotiator-example",
-    "license": "MIT",
+    "license": "proprietary",
     "type": "project",
     "autoload": {
         "psr-4": {
@@ -11,21 +11,12 @@
             "app/AppCache.php"
         ]
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/SoboLAN/rest-negotiator"
-        }
-    ],
     "require": {
-        "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
-        "sobolan/rest-negotiator": "dev-master",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~5.0"
-    },
-    "require-dev": {
-        "symfony/phpunit-bridge": "~2.7"
+        "php": ">=5.5.9",
+        "symfony/symfony": "3.1.*",
+        "sobolan/rest-negotiator": "~1.0",
+        "symfony/monolog-bundle": "^2.8",
+        "sensio/distribution-bundle": "^5.0"
     },
     "scripts": {
         "post-install-cmd": [
@@ -43,15 +34,12 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ]
     },
-    "config": {
-        "bin-dir": "bin",
-        "platform": {
-            "php": "5.3.9"
-        }
-    },
     "extra": {
         "symfony-app-dir": "app",
+        "symfony-bin-dir": "bin",
+        "symfony-var-dir": "var",
         "symfony-web-dir": "web",
+        "symfony-tests-dir": "tests",
         "symfony-assets-install": "relative"
     }
 }
